--- a/src/app/main-view/components/app-home/app-home.component.html
+++ b/src/app/main-view/components/app-home/app-home.component.html
@@ -65,46 +65,7 @@
         <a href="" class="more">ver todo</a>
     </div>
     <div class="content-grid">
-        <div class="content-card">
-            <div class="card-img-box">
-                <img src="../../../../assets/images/disc01.png" alt="">
-                <button class="btn-player"><img src="../../../../assets/images/play(1).png" alt=""></button>
-            </div>
-            <div class="card-text">
-                <a href="">Sin Oficina</a>
-                <p>Bosco Soler</p>
-            </div>
-        </div>
-        <div class="content-card">
-            <div class="card-img-box">
-                <img src="../../../../assets/images/disc01.png" alt="">
-                <button class="btn-player"><img src="../../../../assets/images/play(1).png" alt=""></button>
-            </div>
-            <div class="card-text">
-                <a href="">Sin Oficina</a>
-                <p>Bosco Soler</p>
-            </div>
-        </div>
-        <div class="content-card">
-            <div class="card-img-box">
-                <img src="../../../../assets/images/disc01.png" alt="">
-                <button class="btn-player"><img src="../../../../assets/images/play(1).png" alt=""></button>
-            </div>
-            <div class="card-text">
-                <a href="">Sin Oficina</a>
-                <p>Bosco Soler</p>
-            </div>
-        </div>
-        <div class="content-card">
-            <div class="card-img-box">
-                <img src="../../../../assets/images/disc01.png" alt="">
-                <button class="btn-player"><img src="../../../../assets/images/play(1).png" alt=""></button>
-            </div>
-            <div class="card-text">
-                <a href="">Sin Oficina</a>
-                <p>Bosco Soler</p>
-            </div>
-        </div>
+        <app-card *ngFor="let album of albums"></app-card>
     </div>
 </section>
 <section class="content">
