--- a/src/app/main-view/components/card/card.component.scss
+++ b/src/app/main-view/components/card/card.component.scss
@@ -25,6 +25,24 @@
         }
     }
 
+    .card-img-box-artist {
+        border-radius: 50%;
+        overflow: hidden;
+        width: 100%;
+        aspect-ratio: 1/1;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+
+        img {
+            width: 100%;
+        }
+
+        .btn-player {
+            position: relative;
+            top: -55%;
+            right: -65%;
+        }
+    }
+
     .card-text {
         padding: 2rem 0;
         a {
