Clase 26.04 - Home done

--- a/src/app/main-view/components/app-top-menu/app-top-menu.component.html
+++ b/src/app/main-view/components/app-top-menu/app-top-menu.component.html
@@ -1,5 +1,5 @@
 <div class="top-bar-back">
-    <button>❮</button>
+    <button (click)="goBack()">❮</button>
     <button>❯</button>
 </div>
 <button class="profile">
