--- a/src/app/main-view/pages/artist-display/artist-display.component.html
+++ b/src/app/main-view/pages/artist-display/artist-display.component.html
@@ -2,7 +2,8 @@
     <img src="" alt="">
     <div class="title-text">
         <h2></h2>
-        <span *ngIf="artist.listening" class="listening">{{ artist.listening }} oyentes mensuales</span>
+        <!-- *ngIf="artist.listening" -->
+        <!-- <span  class="listening">{{ artist.listening }} oyentes mensuales</span> -->
     </div>
 </div>
 <div class="main-buttons">
