--- a/src/app/main-view/components/card-display/card-display.component.html
+++ b/src/app/main-view/components/card-display/card-display.component.html
@@ -1,15 +1,7 @@
-<div class="content-title">
+<div *ngIf="collection" class="content-title">
     <a routerLink="/collections/{{ collection.id }}" class="title">{{ collection.title }}</a>
     <a href="" class="more">ver todo</a>
 </div>
 <div class="content-grid">
-    <app-card *ngFor="let album of albums" [album]="album" routerLink="/albums/{{album.id}}"></app-card>
-    <app-card *ngFor="let artist of artists" [artist]="artist" routerLink="/artists/{{artist.id}}"></app-card>
-    <app-card *ngFor="let playlist of playlists" [playlist]="playlist" routerLink="/playlists/{{playlist.id}}"></app-card>
-    <app-card *ngFor="let song of songs" [song]="song" routerLink="/songs/{{song.id}}"></app-card>
-
-    <!-- <app-card *ngIf="albums" *ngFor="let album of albums" [album]="album" routerLink="/albums/{{album.id}}"></app-card>
-    <app-card *ngIf="artists" *ngFor="let artist of artists" [artist]="artist" routerLink="/artists/{{artist.id}}"></app-card>
-    <app-card *ngIf="playlists" *ngFor="let playlist of playlists" [playlist]="playlist" routerLink="/playlists/{{playlist.id}}"></app-card>
-    <app-card *ngIf="songs" *ngFor="let song of songs" [song]="song" routerLink="/songs/{{song.id}}"></app-card> -->
+    <app-card *ngFor="let playlist of playlists$ | async" [playlist]="playlist" routerLink="/playlists/{{playlist.id}}"></app-card>
 </div>
