--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -1,10 +1,10 @@
 .wrapper {
     width: 100%;
-    margin-top: 6.5rem;
-    padding: 0 3rem 6rem;
+    // margin-top: 6.5rem;
+    // padding: 0 3rem 6rem;
+    // gap: 2.4rem;
     display: flex;
     flex-direction: column;
-    gap: 2.4rem;
     max-width: 1955px;
 }
 
