--- a/src/app/main-view/components/app-top-menu/app-top-menu.component.html
+++ b/src/app/main-view/components/app-top-menu/app-top-menu.component.html
@@ -1,6 +1,6 @@
 <div class="top-bar-back">
     <button (click)="goBack()">❮</button>
-    <button>❯</button>
+    <button (click)="goForward()">❯</button>
 </div>
 <button class="profile">
     <img src="../../../../assets/images/account.png" alt="">
