--- a/src/app/main-view/pages/app-home/app-home.component.html
+++ b/src/app/main-view/pages/app-home/app-home.component.html
@@ -1,4 +1,5 @@
-<section class="welcome">
+<div class="wrapper">
+    <section class="welcome">
     <div class="content-title">
         <h2>¡Buenos días!</h2>
     </div>
@@ -62,7 +63,7 @@
 
 
 <app-card-display *ngFor="let collection of collections" [collection]="collection" class="content"></app-card-display>
-
+<!-- 
 
 
 <section class="content">
@@ -122,4 +123,6 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
+</div>
+
