--- a/src/app/main-view/components/card-display/card-display.component.scss
+++ b/src/app/main-view/components/card-display/card-display.component.scss
@@ -67,6 +67,9 @@ $xl-large: 1500px;
     grid-template-columns: repeat(6, 1fr);
     gap: 2.4rem;
     padding: 1rem 0 1.5rem;
+    grid-template-rows:auto; /* first row auto */
+    grid-auto-rows: 0; /* all the other rows 0 */
+    overflow-y: hidden;
 
     @include mobile {
         grid-template-columns: repeat(1, 1fr);
