--- a/src/app/main-view/pages/app-home/app-home.component.scss
+++ b/src/app/main-view/pages/app-home/app-home.component.scss
@@ -39,6 +39,14 @@ $xl-large: 1500px;
         @content;
     }
 }
+.wrapper {
+    margin-top: 6.5rem;
+    padding: 0 3rem 6rem;
+    gap: 2.4rem;
+    display: flex;
+    flex-direction: column;
+
+}
 
 .welcome {
 
@@ -148,6 +156,9 @@ $xl-large: 1500px;
         grid-template-columns: repeat(6, 1fr);
         gap: 2.4rem;
         padding: 1rem 0 1.5rem;
+
+        grid-template-rows: 1fr 0 0 0 0 0;
+        overflow: hidden;
 
         @include mobile {
             grid-template-columns: repeat(1, 1fr);
