--- a/src/app/main-view/components/app-top-menu/app-top-menu.component.html
+++ b/src/app/main-view/components/app-top-menu/app-top-menu.component.html
@@ -1,4 +1,4 @@
-<div class="top-bar-back">
+<div class="top-bar-controls">
     <button (click)="goBack()">❮</button>
     <button (click)="goForward()">❯</button>
 </div>
